# xor-random-encrypter

./: .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  README.md  SECURITY.md  main.cpp
.github/workflows/: main.yml
archive/: Archiver.cpp  Archiver.h  Encrypt.cpp  Encrypt.h
extract/: Decrypt.cpp  Decrypt.h  UnArchiver.cpp  UnArchiver.h
keyop/: KeyExtractor.cpp  KeyExtractor.h  KeyInserter.cpp  KeyInserter.h
